updated the - career page for mobile view.

--- a/app/views/home/career.html.erb
+++ b/app/views/home/career.html.erb
@@ -1,16 +1,8 @@
 <section id="career-banner">
 </section>
-<section class="personal-loan-section">
+<section class="">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 about-us">
-        <h2 class="card-title">Career with GrowwCapital</h2>
-        <h3>- An Environment That Brings Out the Best in You!</h3><br>
-        <p>Groww Capital is working towards building an aware clientele by offering strong understanding of financial products and its implications on one’s life in long term and immediately, helping clients to make informed decision. It’s because of this philosophy we follow that we want to get associated with best people, be it investors or employees!  We offer relevant, unbiased, and personalized services and this is what drives us to deliver, excel, and grow and would like our applicants to believe in as they prepare to work with us.</p>
-        <p>We work in an environment where we grow, grow together with each other’s help, and have immense fun. If you are willing to work hard as well as smart, do drop us a mail as we might make a great team together!</p>
-        <p>Email your resume with a covering note on <a href="mailto:support@growwcapital.com">support@growwcapital.com</a>.</p> 
-        <p>Call us for information <a href="tel:+919112345687">+91-91123-45687</a></p>
-      </div>
       <div class="col-md-6 about-us">
         <h2 class="card-title">Apply Here:</h2>
         <%= form_tag("/home/job_apply", method: :post) do %>
@@ -32,6 +24,14 @@
           </select>
           <input type="submit" value="Submit" class="btn btn-custom">
         <%end%>
+        <p>Email your resume with a covering note on <a href="mailto:hr@growwcapital.com">hr@growwcapital.com</a>.</p>
+        <p>Call us for information <a href="tel:+919112345687">+91-91123-45687</a></p>
+      </div>
+      <div class="col-md-6 about-us">
+        <h2 class="card-title">Career with GrowwCapital</h2>
+        <h3>- An Environment That Brings Out the Best in You!</h3><br>
+        <p>Groww Capital is working towards building an aware clientele by offering strong understanding of financial products and its implications on one’s life in long term and immediately, helping clients to make informed decision. It’s because of this philosophy we follow that we want to get associated with best people, be it investors or employees!  We offer relevant, unbiased, and personalized services and this is what drives us to deliver, excel, and grow and would like our applicants to believe in as they prepare to work with us.</p>
+        <p>We work in an environment where we grow, grow together with each other’s help, and have immense fun. If you are willing to work hard as well as smart, do drop us a mail as we might make a great team together!</p>
       </div>
     </div>
   </div>
