--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -278,11 +278,11 @@
           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 social-media-icons">
             <ul class="social margin-bottom-25 md-margin-bottom-25 sm-margin-bottom-20 xs-margin-bottom-20 xs-padding-top-10 clearfix">
               <li><a class="sc-1" href="https://www.facebook.com/growwcapital" target="_blank"></a></li>
-              <li><a class="sc-2" href="https://twitter.com/growwcapital2" target="_blank"></a></li>
+              <li><a class="sc-2" href="https://twitter.com/growwcapital_" target="_blank"></a></li>
               <!-- <li><a class="sc-3" href="#"></a></li> -->
-              <li><a class="sc-5" href="https://www.linkedin.com/in/groww-capital-375896238/" target="_blank"></a></li>
+              <li><a class="sc-5" href="https://www.linkedin.com/company/growwcapital-pvt-ltd/?viewAsMember=true" target="_blank"></a></li>
               <!-- <li><a class="sc-9" href="#"></a></li> -->
-              <li><a class="sc-11" href="https://www.instagram.com/growwcapital_1/" target="_blank"></a></li>
+              <li><a class="sc-11" href="https://www.instagram.com/growwcapital_/" target="_blank"></a></li>
             </ul>
           </div>
         </div>
