--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -53,7 +53,9 @@
           <%end%>
         <%end%>
         <span><%= current_user.full_name %></span>
-        <%= link_to "Log Out", destroy_user_session_path, class: 'logout' %>
+        <%= link_to destroy_user_session_path, title: 'Log Out', class: 'logout' do %>
+          <i class="fa fa-sign-out"></i>
+        <%end%>
       </div>
     </div>
     <div class="personal_admin_body">
