--- a/app/views/personal_admin/disbursement/show.html.erb
+++ b/app/views/personal_admin/disbursement/show.html.erb
@@ -19,7 +19,7 @@
         <tr>
           <th>Email:</th>
           <td><%= @disbursement.email %></td>
-          <th>Business Name:</th>
+          <th>Company Name:</th>
           <td><%= @disbursement.business_name %></td>
         </tr>
         <tr>
