--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta name="description" content="<%= @description %>">
     <meta name="keywords" content="<%=  %>">
     <meta name="google-site-verification" content="vluZCVNoRTrhS0n-KvdHFdGkSzJnq1wIS1zWyIOq9h0" />
+    <meta name="p:domain_verify" content="db0ae1b307e7cdf553ddd22f957546f8"/>
     <link rel="canonical" href="https://growwcapital.com/" />
     <%= favicon_link_tag asset_path('logo.ico'), :rel => 'icon', :type => "image/x-icon" %>
     <title><%= "#{@title}" if @title %></title>
