--- a/app/assets/stylesheets/personal_admin.scss
+++ b/app/assets/stylesheets/personal_admin.scss
@@ -2,7 +2,7 @@
  *= require bootstrap.min.css
  *= require jquery-ui.css
  *= require font-awesome.min.css
- *= require select2
+ *= require chosen
 */
 
 body, html {
@@ -12,6 +12,36 @@ body, html {
   }
   .field_with_errors {
     display: inline;
+  }
+
+  .chosen-container-multi, .chosen-container-single {
+    display: block;
+    width: 100% !important;
+    .chosen-single {
+      padding: 0px !important;
+      height: 35px;
+      span {
+        margin-top: 5px;
+        margin-left: 10px;
+      }
+      div {
+        margin-top: 6px;
+      }
+    }
+    .chosen-choices, .chosen-single {
+      display: block;
+      width: 100% !important;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      color: #495057;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+      background-image: none;
+    }
   }
 
   .digg_pagination {
